third_party/libxckernel/include/xckernel.h

/* libxckernel: generated exchange-correlation kernel contractions
 * (an automatic-differentiation backend for Libxc).
 * Version 0.1.0. Machine-generated by xckernel; do not edit.
 * Copyright (c) 2026 Susi Lehtola.
 *
 * ABI: one perturbation-batch entry per call; `scal` is an ordered
 * array of per-point scalar operands (see <name>_scal_names /
 * manifest.json); `out` is accumulated (+=). Returns 0 on success.
 * lapl_chi is the basis Laplacian collocation and hess_chi the
 * packed second-derivative collocation (6 blocks: xx,xy,xz,yy,
 * yz,zz); pass NULL when the kernel's family does not use them.
 * Kernels contain XC terms only: Coulomb, HF and range-separated
 * exchange are host-owned.
 *
 * Mixed functionals: libxckernel never evaluates functionals.
 * Every kernel is JOINTLY LINEAR in the functional-derivative
 * operands (each generated term carries exactly one derivative
 * factor; enforced at generation time), so hosts pass their own
 * coefficient-mixed (superfunctional) derivative arrays and
 * F[sum_i c_i f_i] = sum_i c_i F[f_i] holds exactly. Cross-family
 * mixtures: evaluate at the union family; absent derivatives are
 * zeros.
 */
#ifndef XCKERNEL_H
#define XCKERNEL_H
#include <stdint.h>
#ifdef __cplusplus
extern "C" {
#endif

#define XCKERNEL_VERSION "0.1.0"

double xck_lda_r_o0(int64_t npts, const double* w,
              const double* rho, const double* zk);

int xck_lda_r_o1(int64_t npts, int64_t nbf,
           const double* chi, const double* dchi,
           const double* lapl_chi, const double* hess_chi,
           const double* const* scal, double* out);
extern const char* xck_lda_r_o1_scal_names[];
extern const int xck_lda_r_o1_n_scal;
extern const int xck_lda_r_o1_n_fields;

int xck_lda_r_o2(int64_t npts, int64_t nbf,
           const double* chi, const double* dchi,
           const double* lapl_chi, const double* hess_chi,
           const double* const* scal, double* out);
extern const char* xck_lda_r_o2_scal_names[];
extern const int xck_lda_r_o2_n_scal;
extern const int xck_lda_r_o2_n_fields;

int xck_lda_ua_o1(int64_t npts, int64_t nbf,
           const double* chi, const double* dchi,
           const double* lapl_chi, const double* hess_chi,
           const double* const* scal, double* out);
extern const char* xck_lda_ua_o1_scal_names[];
extern const int xck_lda_ua_o1_n_scal;
extern const int xck_lda_ua_o1_n_fields;

int xck_lda_ua_o2(int64_t npts, int64_t nbf,
           const double* chi, const double* dchi,
           const double* lapl_chi, const double* hess_chi,
           const double* const* scal, double* out);
extern const char* xck_lda_ua_o2_scal_names[];
extern const int xck_lda_ua_o2_n_scal;
extern const int xck_lda_ua_o2_n_fields;

int xck_lda_ub_o1(int64_t npts, int64_t nbf,
           const double* chi, const double* dchi,
           const double* lapl_chi, const double* hess_chi,
           const double* const* scal, double* out);
extern const char* xck_lda_ub_o1_scal_names[];
extern const int xck_lda_ub_o1_n_scal;
extern const int xck_lda_ub_o1_n_fields;

int xck_lda_ub_o2(int64_t npts, int64_t nbf,
           const double* chi, const double* dchi,
           const double* lapl_chi, const double* hess_chi,
           const double* const* scal, double* out);
extern const char* xck_lda_ub_o2_scal_names[];
extern const int xck_lda_ub_o2_n_scal;
extern const int xck_lda_ub_o2_n_fields;

int xck_lda_st_o2_p(int64_t npts, int64_t nbf,
           const double* chi, const double* dchi,
           const double* lapl_chi, const double* hess_chi,
           const double* const* scal, double* out);
extern const char* xck_lda_st_o2_p_scal_names[];
extern const int xck_lda_st_o2_p_n_scal;
extern const int xck_lda_st_o2_p_n_fields;

int xck_lda_st_o2_m(int64_t npts, int64_t nbf,
           const double* chi, const double* dchi,
           const double* lapl_chi, const double* hess_chi,
           const double* const* scal, double* out);
extern const char* xck_lda_st_o2_m_scal_names[];
extern const int xck_lda_st_o2_m_n_scal;
extern const int xck_lda_st_o2_m_n_fields;

double xck_gga_r_o0(int64_t npts, const double* w,
              const double* rho, const double* zk);

int xck_gga_r_o1(int64_t npts, int64_t nbf,
           const double* chi, const double* dchi,
           const double* lapl_chi, const double* hess_chi,
           const double* const* scal, double* out);
extern const char* xck_gga_r_o1_scal_names[];
extern const int xck_gga_r_o1_n_scal;
extern const int xck_gga_r_o1_n_fields;

int xck_gga_r_o2(int64_t npts, int64_t nbf,
           const double* chi, const double* dchi,
           const double* lapl_chi, const double* hess_chi,
           const double* const* scal, double* out);
extern const char* xck_gga_r_o2_scal_names[];
extern const int xck_gga_r_o2_n_scal;
extern const int xck_gga_r_o2_n_fields;

int xck_gga_ua_o1(int64_t npts, int64_t nbf,
           const double* chi, const double* dchi,
           const double* lapl_chi, const double* hess_chi,
           const double* const* scal, double* out);
extern const char* xck_gga_ua_o1_scal_names[];
extern const int xck_gga_ua_o1_n_scal;
extern const int xck_gga_ua_o1_n_fields;

int xck_gga_ua_o2(int64_t npts, int64_t nbf,
           const double* chi, const double* dchi,
           const double* lapl_chi, const double* hess_chi,
           const double* const* scal, double* out);
extern const char* xck_gga_ua_o2_scal_names[];
extern const int xck_gga_ua_o2_n_scal;
extern const int xck_gga_ua_o2_n_fields;

int xck_gga_ub_o1(int64_t npts, int64_t nbf,
           const double* chi, const double* dchi,
           const double* lapl_chi, const double* hess_chi,
           const double* const* scal, double* out);
extern const char* xck_gga_ub_o1_scal_names[];
extern const int xck_gga_ub_o1_n_scal;
extern const int xck_gga_ub_o1_n_fields;

int xck_gga_ub_o2(int64_t npts, int64_t nbf,
           const double* chi, const double* dchi,
           const double* lapl_chi, const double* hess_chi,
           const double* const* scal, double* out);
extern const char* xck_gga_ub_o2_scal_names[];
extern const int xck_gga_ub_o2_n_scal;
extern const int xck_gga_ub_o2_n_fields;

int xck_gga_st_o2_p(int64_t npts, int64_t nbf,
           const double* chi, const double* dchi,
           const double* lapl_chi, const double* hess_chi,
           const double* const* scal, double* out);
extern const char* xck_gga_st_o2_p_scal_names[];
extern const int xck_gga_st_o2_p_n_scal;
extern const int xck_gga_st_o2_p_n_fields;

int xck_gga_st_o2_m(int64_t npts, int64_t nbf,
           const double* chi, const double* dchi,
           const double* lapl_chi, const double* hess_chi,
           const double* const* scal, double* out);
extern const char* xck_gga_st_o2_m_scal_names[];
extern const int xck_gga_st_o2_m_n_scal;
extern const int xck_gga_st_o2_m_n_fields;

double xck_mgga_tau_r_o0(int64_t npts, const double* w,
              const double* rho, const double* zk);

int xck_mgga_tau_r_o1(int64_t npts, int64_t nbf,
           const double* chi, const double* dchi,
           const double* lapl_chi, const double* hess_chi,
           const double* const* scal, double* out);
extern const char* xck_mgga_tau_r_o1_scal_names[];
extern const int xck_mgga_tau_r_o1_n_scal;
extern const int xck_mgga_tau_r_o1_n_fields;

int xck_mgga_tau_r_o2(int64_t npts, int64_t nbf,
           const double* chi, const double* dchi,
           const double* lapl_chi, const double* hess_chi,
           const double* const* scal, double* out);
extern const char* xck_mgga_tau_r_o2_scal_names[];
extern const int xck_mgga_tau_r_o2_n_scal;
extern const int xck_mgga_tau_r_o2_n_fields;

int xck_mgga_tau_ua_o1(int64_t npts, int64_t nbf,
           const double* chi, const double* dchi,
           const double* lapl_chi, const double* hess_chi,
           const double* const* scal, double* out);
extern const char* xck_mgga_tau_ua_o1_scal_names[];
extern const int xck_mgga_tau_ua_o1_n_scal;
extern const int xck_mgga_tau_ua_o1_n_fields;

int xck_mgga_tau_ua_o2(int64_t npts, int64_t nbf,
           const double* chi, const double* dchi,
           const double* lapl_chi, const double* hess_chi,
           const double* const* scal, double* out);
extern const char* xck_mgga_tau_ua_o2_scal_names[];
extern const int xck_mgga_tau_ua_o2_n_scal;
extern const int xck_mgga_tau_ua_o2_n_fields;

int xck_mgga_tau_ub_o1(int64_t npts, int64_t nbf,
           const double* chi, const double* dchi,
           const double* lapl_chi, const double* hess_chi,
           const double* const* scal, double* out);
extern const char* xck_mgga_tau_ub_o1_scal_names[];
extern const int xck_mgga_tau_ub_o1_n_scal;
extern const int xck_mgga_tau_ub_o1_n_fields;

int xck_mgga_tau_ub_o2(int64_t npts, int64_t nbf,
           const double* chi, const double* dchi,
           const double* lapl_chi, const double* hess_chi,
           const double* const* scal, double* out);
extern const char* xck_mgga_tau_ub_o2_scal_names[];
extern const int xck_mgga_tau_ub_o2_n_scal;
extern const int xck_mgga_tau_ub_o2_n_fields;

int xck_mgga_tau_st_o2_p(int64_t npts, int64_t nbf,
           const double* chi, const double* dchi,
           const double* lapl_chi, const double* hess_chi,
           const double* const* scal, double* out);
extern const char* xck_mgga_tau_st_o2_p_scal_names[];
extern const int xck_mgga_tau_st_o2_p_n_scal;
extern const int xck_mgga_tau_st_o2_p_n_fields;

int xck_mgga_tau_st_o2_m(int64_t npts, int64_t nbf,
           const double* chi, const double* dchi,
           const double* lapl_chi, const double* hess_chi,
           const double* const* scal, double* out);
extern const char* xck_mgga_tau_st_o2_m_scal_names[];
extern const int xck_mgga_tau_st_o2_m_n_scal;
extern const int xck_mgga_tau_st_o2_m_n_fields;

#ifdef __cplusplus
}
#endif
#endif /* XCKERNEL_H */