third_party/libxckernel/fortran/xckernel_f03.f90

! libxckernel Fortran interface. Machine-generated by xckernel; do not edit.
! Copyright (c) 2026 Susi Lehtola.
! Version 0.1.0.
! Scalar operands are passed as an array of C pointers in the order
! given by the kernel's manifest entry (see manifest.json).
module xckernel_f03
  use, intrinsic :: iso_c_binding, only: c_int, c_int64_t, c_double, c_ptr
  implicit none
  public
  interface
    real(c_double) function xck_lda_r_o0(npts, w, rho, zk) bind(C, name='xck_lda_r_o0')
      import :: c_int64_t, c_double
      integer(c_int64_t), value :: npts
      real(c_double), intent(in) :: w(*), rho(*), zk(*)
    end function xck_lda_r_o0
    integer(c_int) function xck_lda_r_o1(npts, nbf, chi, dchi, lapl_chi, hess_chi, scal, out) bind(C, name='xck_lda_r_o1')
      import :: c_int, c_int64_t, c_double, c_ptr
      integer(c_int64_t), value :: npts, nbf
      real(c_double), intent(in) :: chi(*), dchi(*)
      type(c_ptr), value :: lapl_chi, hess_chi
      type(c_ptr), intent(in) :: scal(*)
      real(c_double), intent(inout) :: out(*)
    end function xck_lda_r_o1
    integer(c_int) function xck_lda_r_o2(npts, nbf, chi, dchi, lapl_chi, hess_chi, scal, out) bind(C, name='xck_lda_r_o2')
      import :: c_int, c_int64_t, c_double, c_ptr
      integer(c_int64_t), value :: npts, nbf
      real(c_double), intent(in) :: chi(*), dchi(*)
      type(c_ptr), value :: lapl_chi, hess_chi
      type(c_ptr), intent(in) :: scal(*)
      real(c_double), intent(inout) :: out(*)
    end function xck_lda_r_o2
    integer(c_int) function xck_lda_ua_o1(npts, nbf, chi, dchi, lapl_chi, hess_chi, scal, out) bind(C, name='xck_lda_ua_o1')
      import :: c_int, c_int64_t, c_double, c_ptr
      integer(c_int64_t), value :: npts, nbf
      real(c_double), intent(in) :: chi(*), dchi(*)
      type(c_ptr), value :: lapl_chi, hess_chi
      type(c_ptr), intent(in) :: scal(*)
      real(c_double), intent(inout) :: out(*)
    end function xck_lda_ua_o1
    integer(c_int) function xck_lda_ua_o2(npts, nbf, chi, dchi, lapl_chi, hess_chi, scal, out) bind(C, name='xck_lda_ua_o2')
      import :: c_int, c_int64_t, c_double, c_ptr
      integer(c_int64_t), value :: npts, nbf
      real(c_double), intent(in) :: chi(*), dchi(*)
      type(c_ptr), value :: lapl_chi, hess_chi
      type(c_ptr), intent(in) :: scal(*)
      real(c_double), intent(inout) :: out(*)
    end function xck_lda_ua_o2
    integer(c_int) function xck_lda_ub_o1(npts, nbf, chi, dchi, lapl_chi, hess_chi, scal, out) bind(C, name='xck_lda_ub_o1')
      import :: c_int, c_int64_t, c_double, c_ptr
      integer(c_int64_t), value :: npts, nbf
      real(c_double), intent(in) :: chi(*), dchi(*)
      type(c_ptr), value :: lapl_chi, hess_chi
      type(c_ptr), intent(in) :: scal(*)
      real(c_double), intent(inout) :: out(*)
    end function xck_lda_ub_o1
    integer(c_int) function xck_lda_ub_o2(npts, nbf, chi, dchi, lapl_chi, hess_chi, scal, out) bind(C, name='xck_lda_ub_o2')
      import :: c_int, c_int64_t, c_double, c_ptr
      integer(c_int64_t), value :: npts, nbf
      real(c_double), intent(in) :: chi(*), dchi(*)
      type(c_ptr), value :: lapl_chi, hess_chi
      type(c_ptr), intent(in) :: scal(*)
      real(c_double), intent(inout) :: out(*)
    end function xck_lda_ub_o2
    integer(c_int) function xck_lda_st_o2_p(npts, nbf, chi, dchi, lapl_chi, hess_chi, scal, out) bind(C, name='xck_lda_st_o2_p')
      import :: c_int, c_int64_t, c_double, c_ptr
      integer(c_int64_t), value :: npts, nbf
      real(c_double), intent(in) :: chi(*), dchi(*)
      type(c_ptr), value :: lapl_chi, hess_chi
      type(c_ptr), intent(in) :: scal(*)
      real(c_double), intent(inout) :: out(*)
    end function xck_lda_st_o2_p
    integer(c_int) function xck_lda_st_o2_m(npts, nbf, chi, dchi, lapl_chi, hess_chi, scal, out) bind(C, name='xck_lda_st_o2_m')
      import :: c_int, c_int64_t, c_double, c_ptr
      integer(c_int64_t), value :: npts, nbf
      real(c_double), intent(in) :: chi(*), dchi(*)
      type(c_ptr), value :: lapl_chi, hess_chi
      type(c_ptr), intent(in) :: scal(*)
      real(c_double), intent(inout) :: out(*)
    end function xck_lda_st_o2_m
    real(c_double) function xck_gga_r_o0(npts, w, rho, zk) bind(C, name='xck_gga_r_o0')
      import :: c_int64_t, c_double
      integer(c_int64_t), value :: npts
      real(c_double), intent(in) :: w(*), rho(*), zk(*)
    end function xck_gga_r_o0
    integer(c_int) function xck_gga_r_o1(npts, nbf, chi, dchi, lapl_chi, hess_chi, scal, out) bind(C, name='xck_gga_r_o1')
      import :: c_int, c_int64_t, c_double, c_ptr
      integer(c_int64_t), value :: npts, nbf
      real(c_double), intent(in) :: chi(*), dchi(*)
      type(c_ptr), value :: lapl_chi, hess_chi
      type(c_ptr), intent(in) :: scal(*)
      real(c_double), intent(inout) :: out(*)
    end function xck_gga_r_o1
    integer(c_int) function xck_gga_r_o2(npts, nbf, chi, dchi, lapl_chi, hess_chi, scal, out) bind(C, name='xck_gga_r_o2')
      import :: c_int, c_int64_t, c_double, c_ptr
      integer(c_int64_t), value :: npts, nbf
      real(c_double), intent(in) :: chi(*), dchi(*)
      type(c_ptr), value :: lapl_chi, hess_chi
      type(c_ptr), intent(in) :: scal(*)
      real(c_double), intent(inout) :: out(*)
    end function xck_gga_r_o2
    integer(c_int) function xck_gga_ua_o1(npts, nbf, chi, dchi, lapl_chi, hess_chi, scal, out) bind(C, name='xck_gga_ua_o1')
      import :: c_int, c_int64_t, c_double, c_ptr
      integer(c_int64_t), value :: npts, nbf
      real(c_double), intent(in) :: chi(*), dchi(*)
      type(c_ptr), value :: lapl_chi, hess_chi
      type(c_ptr), intent(in) :: scal(*)
      real(c_double), intent(inout) :: out(*)
    end function xck_gga_ua_o1
    integer(c_int) function xck_gga_ua_o2(npts, nbf, chi, dchi, lapl_chi, hess_chi, scal, out) bind(C, name='xck_gga_ua_o2')
      import :: c_int, c_int64_t, c_double, c_ptr
      integer(c_int64_t), value :: npts, nbf
      real(c_double), intent(in) :: chi(*), dchi(*)
      type(c_ptr), value :: lapl_chi, hess_chi
      type(c_ptr), intent(in) :: scal(*)
      real(c_double), intent(inout) :: out(*)
    end function xck_gga_ua_o2
    integer(c_int) function xck_gga_ub_o1(npts, nbf, chi, dchi, lapl_chi, hess_chi, scal, out) bind(C, name='xck_gga_ub_o1')
      import :: c_int, c_int64_t, c_double, c_ptr
      integer(c_int64_t), value :: npts, nbf
      real(c_double), intent(in) :: chi(*), dchi(*)
      type(c_ptr), value :: lapl_chi, hess_chi
      type(c_ptr), intent(in) :: scal(*)
      real(c_double), intent(inout) :: out(*)
    end function xck_gga_ub_o1
    integer(c_int) function xck_gga_ub_o2(npts, nbf, chi, dchi, lapl_chi, hess_chi, scal, out) bind(C, name='xck_gga_ub_o2')
      import :: c_int, c_int64_t, c_double, c_ptr
      integer(c_int64_t), value :: npts, nbf
      real(c_double), intent(in) :: chi(*), dchi(*)
      type(c_ptr), value :: lapl_chi, hess_chi
      type(c_ptr), intent(in) :: scal(*)
      real(c_double), intent(inout) :: out(*)
    end function xck_gga_ub_o2
    integer(c_int) function xck_gga_st_o2_p(npts, nbf, chi, dchi, lapl_chi, hess_chi, scal, out) bind(C, name='xck_gga_st_o2_p')
      import :: c_int, c_int64_t, c_double, c_ptr
      integer(c_int64_t), value :: npts, nbf
      real(c_double), intent(in) :: chi(*), dchi(*)
      type(c_ptr), value :: lapl_chi, hess_chi
      type(c_ptr), intent(in) :: scal(*)
      real(c_double), intent(inout) :: out(*)
    end function xck_gga_st_o2_p
    integer(c_int) function xck_gga_st_o2_m(npts, nbf, chi, dchi, lapl_chi, hess_chi, scal, out) bind(C, name='xck_gga_st_o2_m')
      import :: c_int, c_int64_t, c_double, c_ptr
      integer(c_int64_t), value :: npts, nbf
      real(c_double), intent(in) :: chi(*), dchi(*)
      type(c_ptr), value :: lapl_chi, hess_chi
      type(c_ptr), intent(in) :: scal(*)
      real(c_double), intent(inout) :: out(*)
    end function xck_gga_st_o2_m
    real(c_double) function xck_mgga_tau_r_o0(npts, w, rho, zk) bind(C, name='xck_mgga_tau_r_o0')
      import :: c_int64_t, c_double
      integer(c_int64_t), value :: npts
      real(c_double), intent(in) :: w(*), rho(*), zk(*)
    end function xck_mgga_tau_r_o0
    integer(c_int) function xck_mgga_tau_r_o1(npts, nbf, chi, dchi, lapl_chi, hess_chi, scal, out) bind(C, name='xck_mgga_tau_r_o1')
      import :: c_int, c_int64_t, c_double, c_ptr
      integer(c_int64_t), value :: npts, nbf
      real(c_double), intent(in) :: chi(*), dchi(*)
      type(c_ptr), value :: lapl_chi, hess_chi
      type(c_ptr), intent(in) :: scal(*)
      real(c_double), intent(inout) :: out(*)
    end function xck_mgga_tau_r_o1
    integer(c_int) function xck_mgga_tau_r_o2(npts, nbf, chi, dchi, lapl_chi, hess_chi, scal, out) bind(C, name='xck_mgga_tau_r_o2')
      import :: c_int, c_int64_t, c_double, c_ptr
      integer(c_int64_t), value :: npts, nbf
      real(c_double), intent(in) :: chi(*), dchi(*)
      type(c_ptr), value :: lapl_chi, hess_chi
      type(c_ptr), intent(in) :: scal(*)
      real(c_double), intent(inout) :: out(*)
    end function xck_mgga_tau_r_o2
    integer(c_int) function xck_mgga_tau_ua_o1(npts, nbf, chi, dchi, lapl_chi, hess_chi, scal, out) bind(C, &
        name='xck_mgga_tau_ua_o1')
      import :: c_int, c_int64_t, c_double, c_ptr
      integer(c_int64_t), value :: npts, nbf
      real(c_double), intent(in) :: chi(*), dchi(*)
      type(c_ptr), value :: lapl_chi, hess_chi
      type(c_ptr), intent(in) :: scal(*)
      real(c_double), intent(inout) :: out(*)
    end function xck_mgga_tau_ua_o1
    integer(c_int) function xck_mgga_tau_ua_o2(npts, nbf, chi, dchi, lapl_chi, hess_chi, scal, out) bind(C, &
        name='xck_mgga_tau_ua_o2')
      import :: c_int, c_int64_t, c_double, c_ptr
      integer(c_int64_t), value :: npts, nbf
      real(c_double), intent(in) :: chi(*), dchi(*)
      type(c_ptr), value :: lapl_chi, hess_chi
      type(c_ptr), intent(in) :: scal(*)
      real(c_double), intent(inout) :: out(*)
    end function xck_mgga_tau_ua_o2
    integer(c_int) function xck_mgga_tau_ub_o1(npts, nbf, chi, dchi, lapl_chi, hess_chi, scal, out) bind(C, &
        name='xck_mgga_tau_ub_o1')
      import :: c_int, c_int64_t, c_double, c_ptr
      integer(c_int64_t), value :: npts, nbf
      real(c_double), intent(in) :: chi(*), dchi(*)
      type(c_ptr), value :: lapl_chi, hess_chi
      type(c_ptr), intent(in) :: scal(*)
      real(c_double), intent(inout) :: out(*)
    end function xck_mgga_tau_ub_o1
    integer(c_int) function xck_mgga_tau_ub_o2(npts, nbf, chi, dchi, lapl_chi, hess_chi, scal, out) bind(C, &
        name='xck_mgga_tau_ub_o2')
      import :: c_int, c_int64_t, c_double, c_ptr
      integer(c_int64_t), value :: npts, nbf
      real(c_double), intent(in) :: chi(*), dchi(*)
      type(c_ptr), value :: lapl_chi, hess_chi
      type(c_ptr), intent(in) :: scal(*)
      real(c_double), intent(inout) :: out(*)
    end function xck_mgga_tau_ub_o2
    integer(c_int) function xck_mgga_tau_st_o2_p(npts, nbf, chi, dchi, lapl_chi, hess_chi, scal, out) bind(C, &
        name='xck_mgga_tau_st_o2_p')
      import :: c_int, c_int64_t, c_double, c_ptr
      integer(c_int64_t), value :: npts, nbf
      real(c_double), intent(in) :: chi(*), dchi(*)
      type(c_ptr), value :: lapl_chi, hess_chi
      type(c_ptr), intent(in) :: scal(*)
      real(c_double), intent(inout) :: out(*)
    end function xck_mgga_tau_st_o2_p
    integer(c_int) function xck_mgga_tau_st_o2_m(npts, nbf, chi, dchi, lapl_chi, hess_chi, scal, out) bind(C, &
        name='xck_mgga_tau_st_o2_m')
      import :: c_int, c_int64_t, c_double, c_ptr
      integer(c_int64_t), value :: npts, nbf
      real(c_double), intent(in) :: chi(*), dchi(*)
      type(c_ptr), value :: lapl_chi, hess_chi
      type(c_ptr), intent(in) :: scal(*)
      real(c_double), intent(inout) :: out(*)
    end function xck_mgga_tau_st_o2_m
  end interface
end module xckernel_f03
